// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useGlobalOverrides > for attribute > should render with global override 1`] = `
<DocumentFragment>
  <div>
    Baz
  </div>
</DocumentFragment>
`;

exports[`useGlobalOverrides > for attribute > should render with global override shorthand 1`] = `
<DocumentFragment>
  <div>
    Baz
  </div>
</DocumentFragment>
`;

exports[`useGlobalOverrides > for attribute > should render with local overrides instead of global overrides 1`] = `
<DocumentFragment>
  <div>
    Local
  </div>
</DocumentFragment>
`;

exports[`useGlobalOverrides > for attribute > should render with local props merged with global overrides component 1`] = `
<DocumentFragment>
  <div
    class="test"
  >
    Baz
  </div>
</DocumentFragment>
`;

exports[`useGlobalOverrides > for model > should render with global override 1`] = `
<DocumentFragment>
  <div>
    Baz
  </div>
</DocumentFragment>
`;

exports[`useGlobalOverrides > for model > should render with global override shorthand 1`] = `
<DocumentFragment>
  <div>
    Baz
  </div>
</DocumentFragment>
`;

exports[`useGlobalOverrides > for model > should render with local overrides instead of global overrides 1`] = `
<DocumentFragment>
  <div>
    Local
  </div>
</DocumentFragment>
`;

exports[`useGlobalOverrides > for model > should render with local props merged with global overrides component 1`] = `
<DocumentFragment>
  <div
    class="test"
  >
    Baz
  </div>
</DocumentFragment>
`;

exports[`useGlobalOverrides > should be empty with null 1`] = `<DocumentFragment />`;

exports[`useGlobalOverrides > should render with global override 1`] = `
<DocumentFragment>
  <div>
    Baz
  </div>
</DocumentFragment>
`;

exports[`useGlobalOverrides > should render with global override shorthand 1`] = `
<DocumentFragment>
  <div>
    Baz
  </div>
</DocumentFragment>
`;

exports[`useGlobalOverrides > should render with global prop override 1`] = `
<DocumentFragment>
  <div
    data="bar"
  >
    Bar
  </div>
</DocumentFragment>
`;

exports[`useGlobalOverrides > should render with local overrides instead of global overrides 1`] = `
<DocumentFragment>
  <div>
    Local
  </div>
</DocumentFragment>
`;

exports[`useGlobalOverrides > should render with local props merged with global overrides component 1`] = `
<DocumentFragment>
  <div
    class="test"
  >
    Baz
  </div>
</DocumentFragment>
`;

exports[`useGlobalOverrides > should render without overrides 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;

exports[`useGlobalOverrides > should replace array prop 1`] = `
<DocumentFragment>
  <div
    data="baz"
  >
    Bar
  </div>
</DocumentFragment>
`;

exports[`useOverrides > should render with automatically nested overrides 1`] = `
<DocumentFragment>
  <div>
    <div>
      Baz
    </div>
  </div>
</DocumentFragment>
`;

exports[`useOverrides > should render with explicit component overrides 1`] = `
<DocumentFragment>
  <div>
    Baz
  </div>
</DocumentFragment>
`;

exports[`useOverrides > should render with manually nested overrides 1`] = `
<DocumentFragment>
  <div>
    <div>
      Baz
    </div>
  </div>
</DocumentFragment>
`;

exports[`useOverrides > should render with null component 1`] = `<DocumentFragment />`;

exports[`useOverrides > should render with props overrides 1`] = `
<DocumentFragment>
  <div
    class="Bar"
  >
    Bar
  </div>
</DocumentFragment>
`;

exports[`useOverrides > should render with shorthand component overrides 1`] = `
<DocumentFragment>
  <div>
    Baz
  </div>
</DocumentFragment>
`;

exports[`useOverrides > should render with style overrides 1`] = `
<DocumentFragment>
  <div
    style="color: red;"
  >
    Bar
  </div>
</DocumentFragment>
`;

exports[`useOverrides > should render without overrides 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;
